--- a/kalkulator.html
+++ b/kalkulator.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="japa">
+        <h2>JAPA'S</h2>
+    </div>
     <div class="kalkulator">
         <input type="text" id="layar">
 
